# siteval

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.py  build_exe.py  pyproject.toml  siteval.spec
.github/workflows/: ci.yml  publish.yml
examples/: filter_neon.py  points_example.csv  test_points.csv
src/grassval/: __init__.py  cli.py  downloader.py  utils.py  validator.py
src/siteval/: __init__.py  app.py  cli.py  downloader.py  params_ui.py  theme.py  utils.py  validator.py
tests/: test_utils.py
