[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siteval"
version = "0.2.0"
description = "Download Esri Wayback imagery and visually validate geographic points from a CSV — dataset-agnostic, works in any remote sensing or land-cover context."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Vikesh Dheeriya", email = "vikesh@ucsb.edu" }]
keywords = ["validation", "wayback", "imagery", "remote-sensing", "land-cover", "geospatial", "site-validation", "temporal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
build = [
    "pyinstaller>=5.0",
]

[project.urls]
Homepage = "https://github.com/vikeshdh/siteval"
Repository = "https://github.com/vikeshdh/siteval"
"Bug Tracker" = "https://github.com/vikeshdh/siteval/issues"

[project.scripts]
siteval = "siteval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
siteval = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
